leptos-fluent-macros/tests/ui/leptos_fluent/fail/invalid_type.stderr
error[E0308]: mismatched types
  --> tests/ui/leptos_fluent/fail/invalid_type.rs:15:5
   |
15 | /     leptos_fluent! {
16 | |         translations: [TRANSLATIONS],
17 | |         locales: "../../../../examples/csr-minimal/locales",
18 | |         url_param,
19 | |         initial_language_from_url_param: true,
20 | |     };
   | |     ^
   | |     |
   | |_____expected `&str`, found integer
   |       arguments to this function are incorrect
   |
note: function defined here
  --> $WORKSPACE/leptos-fluent/src/url.rs
   |
   |     pub fn get(k: &str) -> Option<String> {
   |            ^^^
   = note: this error originates in the macro `leptos_fluent` (in Nightly builds, run with -Z macro-backtrace for more info)
